# maildir_ai

./: Cargo.toml  README.md
kdb/: .muttrc
kdb/INBOX/cur/: 1729084200.353464_11.rave:2,RS  1729084370.57217_1.localhost:2,S  1729084381.83317_1.localhost:2,RS  1729084386.44056_1.localhost:2,RS  1729084425.55976_1.localhost:2,S  1729085035.353464_21.rave:2,S  1729085073.03619_1.localhost:2,RS  1729085153.354204_1.rave:2,S  1729085224.74484_1.localhost:2,S  1729085228.89161_1.localhost:2,RS  1729085351.354204_3.rave:2,S  1729085388.39093_1.localhost:2,S  1729085390.37294_1.localhost:2,S  1729085474.354204_5.rave:2,S  1729085498.20236_1.localhost:2,RS  1729127640.356566_1.rave:2,S  1729127679.46039_1.localhost:2,S  1729127800.356566_3.rave:2,RS  1729127847.13003_1.localhost:2,S  1729127847.13343_1.localhost:2,RS  1729128311.356566_5.rave:2,S  1729128382.90632_1.localhost:2,RS  1729128385.25689_1.localhost:2,S  1729128534.356566_7.rave:2,S  1729128553.68992_1.localhost:2,RS  1729128724.356566_9.rave:2,S  1729128742.26048_1.localhost:2,S  1729128743.40780_1.localhost:2,RS  1729128957.356566_11.rave:2,S  1729128986.10835_1.localhost:2,RS  1729128986.36351_1.localhost:2,S  1729129030.358412_1.rave:2,S  1729129052.67711_1.localhost:2,RS  1729129228.358412_3.rave:2,S  1729129253.61090_1.localhost:2,S  1729129254.54572_1.localhost:2,S  1729129352.358412_5.rave:2,S  1729129389.66718_1.localhost:2,S  1729129393.04949_1.localhost:2,S  1729129601.358412_7.rave:2,S  (+9 more)
src/: lib.rs
